--- a/src/index.njk
+++ b/src/index.njk
@@ -4,7 +4,7 @@ title: Hello 👋
 ---
 <div class="container md:mb-8">
  {% include 'page-title.njk' %}
- <p class="mb-4 md:mb-8 md:text-lg">Here you’ll find some photos from our travels around Greece:</p>
+ <p class="mb-4 md:mb-8 md:text-lg">Here you’ll find a collection of photo albums:</p>
   <ul>
     {% for item in collections.photos %}
     <li>
@@ -15,5 +15,5 @@ title: Hello 👋
     {% endfor %}
   </ul>
   <hr class="border-gray-900 opacity-10 mb-4 md:mb-8">
- <p class="md:text-lg">If you’re looking for the old site from our round the world trip, you can still find it <a class="text-blue-500 underline" href="https://www.grantelliott.co" target="_blank">here</a>.</p>
+ 
 </div>
